--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,82 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .App {
-  text-align: center;
+  height: 100vh;
+  font-size: calc(10px + 2vmin);
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Top{
+  background-color: #2c2e37;
+  width: 100%;
+  height: 10%;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: 3.2rem;
+  font-weight: 700;
 }
 
-.App-link {
-  color: #61dafb;
+
+.search{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 10%;
+}
+h1{
+position:fixed;
+left: 200px;
+top: 100px;
+border: 2px solid green;
+display: inline;
+}
+.search > input{
+  width: 50%;
+  height: 60%;
+  font-size: 20px;
+  text-transform: uppercase;
+}
+.search > button{
+  width: 10%;
+  height: 60%;
+  font-weight: 500;
+  font-size: 80%;
+}
+hr{
+  background-color: rgba(0,0,0,0.1);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nothingfound{
+  display: flex;
+  display: block;
+  color:red;
+  align-items: center;
+  justify-content: center;
+}
+.none{
+  display: none;
+}
+.cont{
+align-content: center;
+  /* border: 2px solid green; */
+  margin-left: 400px;
+  display: inline-block;
+
+}
+.card{
+  box-shadow:1px 1px 10px rgba(0,0,0,0.5);
+  border: 5px solid black;
+  height: 80vh;
+}
+.appl{
+
+  display: flex;
+   flex-direction: row;
+   justify-content: center;
+    align-items: center;
+     margin-top: 20;
 }
